turing-talos/apps/envoy-gateways/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-public
  namespace: envoy-gateway-system
spec:
  addresses:
  - type: IPAddress
    value: 192.168.1.55
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.jern.fi"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-jern-fi-cert
  - name: https-apex
    protocol: HTTPS
    port: 443
    hostname: jern.fi
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: apex-jern-fi-cert
